<resources>
    <string name="app_name">Flash Pay</string>
    <string name="cargando">Cargango...</string>
    <string name="hint_text_nombres">Nombres</string>
    <string name="hint_text_apellidos">Apellidos</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_text_tipo_documento">Tipo de documento</string>
    <string name="hint_text_nro_documento">Nro. de documento</string>
    <string name="date_picker_result_value">%1$s/%2$s/%3$s</string>
    <string name="hint_text_fecha_nac">Fecha nacimiento</string>
    <string name="hint_text_email">Email</string>
    <string name="hint_text_phone">Telefono</string>
    <string name="subtitulo_registro">Afiliacion</string>
    <string name="btn_siguiente">Siguiente</string>
    <string name="hint_text_entidad_bancaria">Entidad Bancaria</string>
    <string name="hint_text_nro_cuenta">Numero de cuenta</string>
    <string name="hint_text_tipo_cuenta">Tipo de cuenta</string>
    <string name="subtitulo_registro_finanzas">Datos financieros</string>
    <string name="hint_text_pais">Pais</string>
    <string name="hint_text_usuario">Usuario</string>
    <string name="hint_text_clave">Clave</string>
    <string name="hint_text_pin">PIN</string>
    <string name="hint_text_credenciales">Pagos rápidos</string>

    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
    <string name="title_activity_login">Inicio de sesion</string>
    <string name="prompt_email">Nombre de Usuario</string>
    <string name="prompt_password">Clave de acceso</string>
    <string name="action_sign_in">Iniciar sesion</string>
    <string name="action_sign_in_short">Iniciar Sesion</string>
    <string name="welcome">"Bienvenido !"</string>
    <string name="invalid_username">El usuario no es valido</string>
    <string name="invalid_password">La clave debe ser mayor a 5 caracteres</string>
    <string name="login_failed">"Acceso Denegado"</string>
    <string name="title_activity_home_main">Flash Pay</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configurar</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_realizar_pago">Realizar pago</string>
    <string name="menu_recibir_recarga">Recibir recargas</string>
    <string name="menu_liberar_banco">Liberar a banco</string>
    <string name="menu_historico">Historico</string>
    <string name="menu_ver_estadisticas">Ver estadisticas</string>
    <string name="menu_eventos">Eventos</string>
    <string name="menu_terminos_condiciones">Terminos y condiciones</string>
    <string name="menu_soporte">Soporte</string>
    <string name="menu_configuracion">Configuracion</string>
    <string name="menu_salida">Salir</string>
    <string name="titulo_recarga">Recargar Saldo</string>
    <string name="hint_text_numero_cuenta">Numero de cuenta</string>
    <string name="hint_text_monto">Monto a recibir</string>
    <string name="hint_text_codigo_temporal">Codigo Temporal</string>
    <string name="boton_leer_qr">Leer QR</string>
    <string name="boton_solicitar_recarga">Solicitar Recarga</string>
    <string name="btn_generar_qr">Generar QR</string>
    <string name="titulo_pagar">Realizar pago</string>
    <string name="titulo_liberar">Liberar al banco</string>
    <string name="boton_solicitar_liberacion">Solicitar liberacion</string>
    <string name="boton_realizar_pago_manual">Por cuenta</string>
    <string name="boton_realizar_pago_qr">Por codigo QR</string>
    <string name="boton_realizar_pago_usuario">Buscar Usuario</string>
    <string name="boton_realizar_pago_pendiente">Pendientes</string>
    <string name="action_registro">Crear cuenta</string>
    <string name="saldo_cero">0.00</string>
    <string name="saldo_moneda">$COL</string>
    <string name="saldo_etiqueta">Saldo actual</string>
    <string name="action_label_qr">Leer QR</string>
    <string name="action_label_buscar_usuario">Lista de usuarios</string>
    <string name="action_label_pendientes">Pendientes</string>
    <string name="etiqueta_acciones">Metodos de pago</string>
    <string name="boton_realizar_pago">Pagar</string>
</resources>
