<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_realizar_pago"
            android:icon="@drawable/pagar"
            android:title="@string/menu_realizar_pago" />
        <item
            android:id="@+id/nav_recibir_recarga"
            android:icon="@drawable/recibir"
            android:title="@string/menu_recibir_recarga" />
        <item
            android:id="@+id/nav_liberar_banco"
            android:icon="@drawable/banco"
            android:title="@string/menu_liberar_banco" />
        <item
            android:id="@+id/nav_historico"
            android:icon="@drawable/historial"
            android:title="@string/menu_historico" />
    </group>

    <item android:title="Otros">
        <menu>
            <item
                android:id="@+id/nav_ver_estadistica"
                android:icon="@drawable/estadisticas"
                android:title="@string/menu_ver_estadisticas" />
            <item
                android:id="@+id/nav_eventos"
                android:icon="@drawable/eventos"
                android:title="@string/menu_eventos" />
            <item
                android:id="@+id/nav_terminos_condiciones"
                android:icon="@drawable/terminos"
                android:title="@string/menu_terminos_condiciones" />
            <item
                android:id="@+id/nav_soporte"
                android:icon="@drawable/soporte"
                android:title="@string/menu_soporte" />
            <item
                android:id="@+id/nav_configuracion"
                android:icon="@drawable/configuracion"
                android:title="@string/menu_configuracion" />
            <item
                android:id="@+id/nav_salida"
                android:icon="@drawable/salida"
                android:title="@string/menu_salida" />
        </menu>
    </item>

</menu>
