<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAzulElectrico"
    tools:context=".PagarSt0Fragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/scrool_contenedor"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingStart="24dp"
                android:paddingLeft="24dp"
                android:paddingEnd="24dp"
                android:paddingRight="24dp"
                android:gravity="center"
                tools:layout_editor_absoluteX="213dp"
                tools:layout_editor_absoluteY="8dp">

                <TextView
                    android:id="@+id/flashpay_moneda"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right|center_vertical"
                    android:text="@string/saldo_moneda"
                    android:textAppearance="@style/flashpay_moneda" />

                <TextView
                    android:id="@+id/flashpay"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:gravity="center_horizontal|center_vertical"
                    android:layout_marginTop="24dp"
                    android:text="@string/saldo_cero"
                    android:textAppearance="@style/flashpay" />

                <TextView
                    android:id="@+id/flashpay_etiqueta_saldo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="18dp"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/saldo_etiqueta"
                    android:textAppearance="@style/flashpay_etiqueta_mini" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_sub_titulo"
                    style="@style/CampoTexto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_text_nombres"
                    android:paddingBottom="12dp">

                    <TextView
                        android:id="@+id/texto_acciones"
                        style="@style/TextoSubTitulo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center|center_horizontal|center_vertical"
                        android:text="@string/etiqueta_acciones" />

                </com.google.android.material.textfield.TextInputLayout>


                <Button
                    android:id="@+id/button_realizar_pago_manual"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="18dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/boton_realizar_pago_manual" />
                <Button
                    android:id="@+id/button_realizar_pago_qr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="18dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/boton_realizar_pago_qr" />
                <Button
                    android:id="@+id/button_realizar_pago_lista"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="18dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/boton_realizar_pago_usuario" />
                <Button
                    android:id="@+id/button_realizar_pago_pendientes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="18dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/boton_realizar_pago_pendiente" />
            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>