<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAzulElectrico"
    tools:context=".PagarSt1Fragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/scrool_contenedor"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingStart="24dp"
                android:paddingLeft="24dp"
                android:paddingEnd="24dp"
                android:paddingRight="24dp"
                android:gravity="center"
                tools:layout_editor_absoluteX="213dp"
                tools:layout_editor_absoluteY="8dp">

                <TextView
                    android:id="@+id/flashpay_moneda"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right|center_vertical"
                    android:text="@string/saldo_moneda"
                    android:textAppearance="@style/flashpay_moneda" />

                <TextView
                    android:id="@+id/flashpay"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:gravity="center_horizontal|center_vertical"
                    android:layout_marginTop="24dp"
                    android:text="@string/saldo_cero"
                    android:textAppearance="@style/flashpay" />

                <TextView
                    android:id="@+id/flashpay_etiqueta_saldo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="18dp"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/saldo_etiqueta"
                    android:textAppearance="@style/flashpay_etiqueta_mini" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_sub_titulo"
                    style="@style/CampoTexto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_text_nombres"
                    android:paddingBottom="12dp">

                    <TextView
                        android:id="@+id/texto_resultado_qr"
                        style="@style/TextoSubTitulo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center|center_horizontal|center_vertical"
                        android:text="@string/titulo_pagar" />

                </com.google.android.material.textfield.TextInputLayout>

                <!--<LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">-->

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layout_input_nro_cuenta_pago"
                        style="@style/CampoTexto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="10"
                        android:hint="@string/hint_text_numero_cuenta">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/input_nro_cuenta_pago"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:nextFocusDown="@id/input_apellidos"
                            android:textColor="@color/colorBlanco" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <!--<Button
                        android:id="@+id/button_start_scanQr"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:background="@drawable/qr"
                        android:gravity="center_vertical" />

                    <Button
                        android:id="@+id/button_buscar_usuario"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="0dp"
                        android:layout_marginEnd="0dp"
                        android:layout_weight="1"
                        android:background="@drawable/ic_search_holo_light"
                        android:gravity="center_vertical" />

                </LinearLayout>-->

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_input_monto_pago"
                    style="@style/CampoTexto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_text_monto">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input__monto_pago"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorBlanco"
                        android:maxLines="1" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/button_realizar_pago"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="35dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/boton_realizar_pago" />
            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>