<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LiberarSt1Fragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/scrool_contenedor"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingStart="24dp"
                android:paddingLeft="24dp"
                android:paddingEnd="24dp"
                android:paddingRight="24dp"
                android:gravity="center"
                tools:layout_editor_absoluteX="213dp"
                tools:layout_editor_absoluteY="8dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_sub_titulo"
                    style="@style/CampoTexto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_text_nombres"
                    android:paddingBottom="12dp">

                    <TextView
                        android:id="@+id/texto_liberar_banco"
                        style="@style/TextoSubTitulo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center|center_horizontal|center_vertical"
                        android:text="@string/titulo_liberar" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_input_nro_cuenta_liberacion"
                    style="@style/CampoTexto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_text_numero_cuenta">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_nro_cuenta_liberacion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorBlanco"
                        android:maxLines="1" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_input_monto_liberacion"
                    style="@style/CampoTexto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_text_monto">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_monto_liberacion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorBlanco"
                        android:maxLines="1" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_input_codigo_temporal_liberacion"
                    style="@style/CampoTexto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_text_codigo_temporal">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_codigo_temporal_liberacion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorBlanco"
                        android:maxLines="1"
                        android:nextFocusDown="@id/spinner_tipo_documento" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/button_solicitar_recarga"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="35dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/boton_solicitar_liberacion" />
            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>