<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DatosFinancierosFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingStart="24dp"
                android:paddingLeft="24dp"
                android:paddingEnd="24dp"
                android:paddingRight="24dp"
                tools:layout_editor_absoluteX="213dp"
                tools:layout_editor_absoluteY="8dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_sub_titulo_finanzas"
                    style="@style/CampoTexto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_text_nombres"
                    android:paddingBottom="12dp">

                <TextView
                    android:id="@+id/tv_subtitulo_finanzas"
                    style="@style/TextoSubTitulo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center|center_horizontal|center_vertical"
                    android:text="@string/subtitulo_registro_finanzas" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_input_pais"
                    style="@style/CampoTexto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_text_pais">

                    <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                        android:id="@+id/spinner_pais"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@android:style/Widget.Material.Light.Spinner.Underlined"
                        android:textColorHint="#05ab9a" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_input_entidad_bancaria"
                    style="@style/CampoTexto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_text_entidad_bancaria">

                    <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                        android:id="@+id/spinner_entidad_bancaria"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@android:style/Widget.Material.Light.Spinner.Underlined"
                        android:textColorHint="#05ab9a" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_input_nro_cuenta"
                    style="@style/CampoTexto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_text_nro_cuenta">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_nro_cuenta"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="number"
                        android:maxLines="1"
                        android:textColor="@color/colorBlanco"
                        android:nextFocusDown="@id/input_email" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_input_tipo_cuenta"
                    style="@style/CampoTexto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_text_tipo_cuenta">

                    <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                        android:id="@+id/spinner_tipo_cuenta"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@android:style/Widget.Material.Light.Spinner.Underlined"
                        android:textColorHint="#05ab9a" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>