<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecargaSt1Fragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/scrool_contenedor"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingStart="24dp"
                android:paddingLeft="24dp"
                android:paddingEnd="24dp"
                android:paddingRight="24dp"
                android:gravity="center"
                tools:layout_editor_absoluteX="213dp"
                tools:layout_editor_absoluteY="8dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_sub_titulo"
                    style="@style/CampoTexto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_text_nombres"
                    android:paddingBottom="12dp">

                    <TextView
                        android:id="@+id/texto_resultado_qr"
                        style="@style/TextoSubTitulo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center|center_horizontal|center_vertical"
                        android:text="@string/titulo_recarga" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_input_monto_recarga"
                    style="@style/CampoTexto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_text_monto">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_monto_recarga"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorBlanco"
                        android:maxLines="1"
                        android:nextFocusDown="@id/spinner_tipo_documento" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/button_generar_qr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="18dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="18dp"
                    android:gravity="center|center_horizontal|center_vertical"
                    android:text="@string/btn_generar_qr" />

                <ImageView
                    android:id="@+id/imagen_qr"
                    android:layout_width="300dp"
                    android:layout_height="300dp"
                    android:src="@drawable/qr"
                    android:visibility="invisible" />


            </LinearLayout>
        </ScrollView>



    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>